Center text in each project. Add link to top of page in nav.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body id="start">
 
   <!-- Add your site or application content here -->
 
     <nav>
       <ul>
+        <li><a href="#start"><div>BACK TO TOP</div></a></li>
         <li><a href="#project1"><div>1</div></a></li>
         <li><a href="#project2"><div>2</div></a></li>
         <li><a href="#project3"><div>3</div></a></li>
@@ -36,7 +37,9 @@
     </nav>
 
   <main>
-    <header>This page is lit.</header>
+    <header>
+      <h1>Welcome to my portfolio</h1>
+    </header>
     
     <section class="projects">
       <article class="project" id="project1">
