Add li in nav to each repo.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
 
     <nav>
-      <ul>
+      <ul id="navUl">
         <li><a href="#start"><div>BACK TO TOP</div></a></li>
         <li><a href="#project1"><div>1</div></a></li>
         <li><a href="#project2"><div>2</div></a></li>
