Change <section> projects from class to id.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1>Welcome to my portfolio</h1>
     </header>
     
-    <section class="projects">
+    <section id="projects">
       <article class="project" id="project1">
         <p>
           This is my first project.
